# ZPassFit-AI

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
app/: __init__.py  grpc_server.py  predictor.py
app/proto/: prediction.proto  prediction_pb2.py  prediction_pb2.pyi  prediction_pb2_grpc.py
models/: catboost_model.cbm  lightgbm_model.txt  xgboost_model.json
notebooks/: generator.ipynb  train.ipynb
