[project]
name = "zpassfit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=2.0.0",
    "torch>=2.11.0",
]
